# BipsNet

./: .gitignore  README.md  package.json
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/src/: lib.rs
contract/src/apptests/: mod.rs  test  test_insuarance.rs  test_mortgage.rs  testproperty.rs  testuser.rs
contract/src/estate_agent/: estate_agent.rs  mod.rs  nftdemo.rs
contract/src/insurance_firm/: insurance_firm.rs  mod.rs
contract/src/legal_office/: legal_office.rs  mod.rs
contract/src/mortgage/: mortgage.rs
contract/src/property/: property.rs
contract/src/property_registry/: mod.rs
contract/src/surveyor/: mod.rs
contract/src/user/: testcode  testcode.rs  user.rs
