[package]
name = "contract"
version = "0.1.0"
authors = ["Felix Awere <felix@bipsnet.com>", "Mustapha Isah <mustapha@bipsnet.com>", "Muhammad"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
near-sdk = "4.0.0-pre.4"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.130"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

